--- a/app/stylesheets/sass/login.scss
+++ b/app/stylesheets/sass/login.scss
@@ -2,6 +2,9 @@ $visual-grid: false;
 
 @import "bourbon";
 @import "neat";
+$font: 'Nixie one', cursive;
+$font-color: white;
+
 
 body {
 
@@ -10,6 +13,19 @@ body {
   #particles-js {
     height: 100%;
     width: 100%;
+
+    .login-title {
+      @include outer-container;
+      font-family: $font;
+      @include span-columns(4);
+      @include shift(4);
+      text-align: center;
+      @include position(fixed, 300px null null null);
+      color: $font-color;
+      font-weight: 300;
+      font-size: 3em;
+
+    }
 
     .container {
       @include span-columns(12);
@@ -21,6 +37,8 @@ body {
       @include shift(4);
       text-align: center;
       @include position(fixed, 420px null null null);
+      font-family: $font;
+      color: $font-color;
     }
   }
 }
