--- a/app/stylesheets/css/styles.css
+++ b/app/stylesheets/css/styles.css
@@ -7,10 +7,10 @@
   max-width: 68em;
   margin-left: auto;
   margin-right: auto;
-  font-family: 'Nixie One', cursive;
+  font-family: "Nixie One", cursive;
   text-align: center;
   font-size: 4em;
-  color: green;
+  color: #2dbe60;
   padding-top: 30px;
   padding-bottom: 30px; }
   .textarea1:after {
@@ -19,7 +19,7 @@
     clear: both; }
 
 textarea {
-  font-family: 'Nixie One', cursive; }
+  font-family: "Nixie One", cursive; }
 
 .textarea2 {
   max-width: 68em;
@@ -30,7 +30,7 @@ textarea {
     display: table;
     clear: both; }
   .textarea2 .speech-box {
-    border: 1px solid green;
+    border: 1px solid #2dbe60;
     width: auto;
     height: 200px;
     float: left;
@@ -46,122 +46,58 @@ textarea {
     float: left;
     display: block;
     margin-right: 2.35765%;
-    width: 57.35098%;
-    margin-left: 21.32451%;
-    text-align: center; }
+    width: 65.88078%;
+    margin-left: 17.05961%;
+    position: relative;
+    top: 50px; }
     .textarea2 .text-buttons:last-child {
       margin-right: 0; }
     .textarea2 .text-buttons .button1 {
-      border: 1px solid #dbdbdb;
-      border-radius: 3px;
-      box-shadow: inset 0 1px 0 0 white;
-      color: #333333;
-      display: inline-block;
-      font-size: inherit;
-      font-weight: bold;
-      background-color: #fff;
-      background-image: -webkit-linear-gradient(#fff, #e3e3e3);
-      background-image: linear-gradient(#fff, #e3e3e3);
-      padding: 7px 18px;
-      text-decoration: none;
-      text-shadow: 0 1px 0 white;
-      background-clip: padding-box;
-      border: 1px solid #dfd8d8;
-      border-radius: 3px;
-      box-shadow: inset 0 1px 0 0 white;
-      color: #333333;
-      display: inline-block;
-      font-size: inherit;
-      font-weight: bold;
-      background-color: #fff;
-      background-image: -webkit-linear-gradient(#fff, #e5e0e0);
-      background-image: linear-gradient(#fff, #e5e0e0);
-      padding: 7px 18px;
-      text-decoration: none;
-      text-shadow: 0 1px 0 white;
-      background-clip: padding-box;
-      font-family: 'Nixie One', cursive;
       margin-right: 0;
-      color: green;
-      margin-right: 10px;
-      background-color: white; }
-      .textarea2 .text-buttons .button1:hover:not(:disabled) {
-        box-shadow: inset 0 1px 0 0 white;
-        cursor: pointer;
-        background-color: #f2f2f2;
-        background-image: -webkit-linear-gradient(#f2f2f2, #dbdbdb);
-        background-image: linear-gradient(#f2f2f2, #dbdbdb); }
-      .textarea2 .text-buttons .button1:active:not(:disabled), .textarea2 .text-buttons .button1:focus:not(:disabled) {
-        border: 1px solid #dbdbdb;
-        box-shadow: inset 0 0 8px 4px #d4d4d4, inset 0 0 8px 4px #d4d4d4; }
-      .textarea2 .text-buttons .button1:hover:not(:disabled) {
-        box-shadow: inset 0 1px 0 0 white;
-        cursor: pointer;
-        background-color: #f2f2f2;
-        background-image: -webkit-linear-gradient(#f2f2f2, #ded8d8);
-        background-image: linear-gradient(#f2f2f2, #ded8d8); }
-      .textarea2 .text-buttons .button1:active:not(:disabled), .textarea2 .text-buttons .button1:focus:not(:disabled) {
-        border: 1px solid #dfd8d8;
-        box-shadow: inset 0 0 8px 4px #d7d1d1, inset 0 0 8px 4px #d7d1d1; }
-      .textarea2 .text-buttons .button1:disabled {
-        opacity: 0.5;
-        cursor: not-allowed; }
+      float: left;
+      display: block;
+      margin-right: 2.35765%;
+      width: 23.23176%;
+      margin-left: 23.03047%;
+      text-align: center;
+      font-family: "Nixie One", cursive;
+      color: #fff;
+      padding: 10px;
+      font-size: 1.2em;
+      background-color: #2dbe60;
+      border-top-left-radius: 5px;
+      border-top-right-radius: 5px;
+      border-bottom-left-radius: 5px;
+      border-bottom-right-radius: 5px;
+      -webkit-box-shadow: 0 3px 7px 1px rgba(130, 130, 130, 0.75);
+      -moz-box-shadow: 0 3px 7px 1px rgba(130, 130, 130, 0.75);
+      box-shadow: 0 3px 7px 1px rgba(130, 130, 130, 0.75);
+      margin-right: 50px; }
+      .textarea2 .text-buttons .button1:last-child {
+        margin-right: 0; }
     .textarea2 .text-buttons .button2 {
-      border: 1px solid #dbdbdb;
-      border-radius: 3px;
-      box-shadow: inset 0 1px 0 0 white;
-      color: #333333;
-      display: inline-block;
-      font-size: inherit;
-      font-weight: bold;
-      background-color: #fff;
-      background-image: -webkit-linear-gradient(#fff, #e3e3e3);
-      background-image: linear-gradient(#fff, #e3e3e3);
-      padding: 7px 18px;
-      text-decoration: none;
-      text-shadow: 0 1px 0 white;
-      background-clip: padding-box;
-      border: 1px solid #dfd8d8;
-      border-radius: 3px;
-      box-shadow: inset 0 1px 0 0 white;
-      color: #333333;
-      display: inline-block;
-      font-size: inherit;
-      font-weight: bold;
-      background-color: #fff;
-      background-image: -webkit-linear-gradient(#fff, #e5e0e0);
-      background-image: linear-gradient(#fff, #e5e0e0);
-      padding: 7px 18px;
-      text-decoration: none;
-      text-shadow: 0 1px 0 white;
-      background-clip: padding-box;
-      font-family: 'Nixie One', cursive;
+      float: left;
+      display: block;
+      margin-right: 2.35765%;
+      width: 23.23176%;
       margin-right: 0;
-      color: green;
-      background-color: white; }
-      .textarea2 .text-buttons .button2:hover:not(:disabled) {
-        box-shadow: inset 0 1px 0 0 white;
-        cursor: pointer;
-        background-color: #f2f2f2;
-        background-image: -webkit-linear-gradient(#f2f2f2, #dbdbdb);
-        background-image: linear-gradient(#f2f2f2, #dbdbdb); }
-      .textarea2 .text-buttons .button2:active:not(:disabled), .textarea2 .text-buttons .button2:focus:not(:disabled) {
-        border: 1px solid #dbdbdb;
-        box-shadow: inset 0 0 8px 4px #d4d4d4, inset 0 0 8px 4px #d4d4d4; }
-      .textarea2 .text-buttons .button2:hover:not(:disabled) {
-        box-shadow: inset 0 1px 0 0 white;
-        cursor: pointer;
-        background-color: #f2f2f2;
-        background-image: -webkit-linear-gradient(#f2f2f2, #ded8d8);
-        background-image: linear-gradient(#f2f2f2, #ded8d8); }
-      .textarea2 .text-buttons .button2:active:not(:disabled), .textarea2 .text-buttons .button2:focus:not(:disabled) {
-        border: 1px solid #dfd8d8;
-        box-shadow: inset 0 0 8px 4px #d7d1d1, inset 0 0 8px 4px #d7d1d1; }
-      .textarea2 .text-buttons .button2:disabled {
-        opacity: 0.5;
-        cursor: not-allowed; }
+      text-align: center;
+      font-family: "Nixie One", cursive;
+      color: #fff;
+      padding: 10px;
+      font-size: 1.2em;
+      background-color: #2dbe60;
+      border-top-left-radius: 5px;
+      border-top-right-radius: 5px;
+      border-bottom-left-radius: 5px;
+      border-bottom-right-radius: 5px;
+      -webkit-box-shadow: 0 3px 7px 1px rgba(130, 130, 130, 0.75);
+      -moz-box-shadow: 0 3px 7px 1px rgba(130, 130, 130, 0.75);
+      box-shadow: 0 3px 7px 1px rgba(130, 130, 130, 0.75); }
+      .textarea2 .text-buttons .button2:last-child {
+        margin-right: 0; }
   .textarea2 .subtext {
-    font-family: 'Nixie One', cursive;
+    font-family: "Nixie One", cursive;
     font-size: 1.5em;
     text-align: center;
     padding-top: 20px;
