--- a/app/stylesheets/css/login.css
+++ b/app/stylesheets/css/login.css
@@ -3,61 +3,58 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box; }
 
-body {
-  background-color: #fff; }
-  body #particles-js {
-    height: 100%;
-    width: 100%; }
-    body #particles-js .login-title {
-      max-width: 68em;
-      margin-left: auto;
-      margin-right: auto;
-      font-family: "Nixie one", cursive;
-      float: left;
-      display: block;
-      margin-right: 2.35765%;
-      width: 31.76157%;
-      margin-left: 34.11922%;
-      text-align: center;
-      position: fixed;
-      top: 300px;
-      color: #2dbe60;
-      font-weight: 300;
-      font-size: 3em; }
-      body #particles-js .login-title:after {
-        content: "";
-        display: table;
-        clear: both; }
-      body #particles-js .login-title:last-child {
-        margin-right: 0; }
-    body #particles-js .login-panel {
-      max-width: 68em;
-      margin-left: auto;
-      margin-right: auto;
-      float: left;
-      display: block;
-      margin-right: 2.35765%;
-      width: 14.70196%;
-      margin-left: 42.64902%;
-      text-align: center;
-      position: fixed;
-      top: 420px;
-      font-family: "Nixie one", cursive;
-      color: #fff;
-      padding: 10px;
-      font-size: 1.2em;
-      background-color: #2dbe60;
-      border-top-left-radius: 5px;
-      border-top-right-radius: 5px;
-      border-bottom-left-radius: 5px;
-      border-bottom-right-radius: 5px; }
-      body #particles-js .login-panel:after {
-        content: "";
-        display: table;
-        clear: both; }
-      body #particles-js .login-panel:last-child {
-        margin-right: 0; }
-  body .footer {
-    position: absolute; }
+.md-whiteframe-z1 {
+  margin: 0;
+  padding: 20px;
+  background-color: #2dbe60; }
+
+.login-text {
+  max-width: 68em;
+  margin-left: auto;
+  margin-right: auto; }
+  .login-text:after {
+    content: "";
+    display: table;
+    clear: both; }
+  .login-text .login-title {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 57.35098%;
+    margin-left: 21.32451%;
+    font-family: "Nixie one", cursive;
+    text-align: center;
+    position: relative;
+    top: 300px;
+    color: #2dbe60;
+    font-weight: 300;
+    font-size: 3em; }
+    .login-text .login-title:last-child {
+      margin-right: 0; }
+
+.button1 {
+  max-width: 68em;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  top: 350px;
+  text-align: center; }
+  .button1:after {
+    content: "";
+    display: table;
+    clear: both; }
+  .button1 .login-panel {
+    width: 150px;
+    text-align: center;
+    font-family: "Nixie one", cursive;
+    color: #fff;
+    padding: 10px;
+    font-size: 1.2em;
+    background-color: #2dbe60;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    text-transform: capitalize; }
 
 /*# sourceMappingURL=login.css.map */
